--- a/dnn/NearestNeighbor/HNN/HNN.vcxproj
+++ b/dnn/NearestNeighbor/HNN/HNN.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{3DB69C07-2CA1-4388-A180-8EA788504088}</ProjectGuid>
-    <RootNamespace>Project1</RootNamespace>
+    <ProjectGuid>{A536A058-B540-4F19-9DDF-9B1A0B3015E8}</ProjectGuid>
+    <RootNamespace>HNN</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
