:arrow_up: add project segtree and MaxdomAlgorithm

--- a/dnn/DataStrcutures/RBTree/RBTree.vcxproj
+++ b/dnn/DataStrcutures/RBTree/RBTree.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Red Black Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
