--- a/dnn/NearestNeighbor/DDNN/DDNN.vcxproj.filters
+++ b/dnn/NearestNeighbor/DDNN/DDNN.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DD.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
