--- a/dnn/DataStrcutures/DCEL/DCEL.vcxproj.filters
+++ b/dnn/DataStrcutures/DCEL/DCEL.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="ConformingSubdivision.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="PolygonalDomain.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConformingSubdivision.cpp">
@@ -45,6 +48,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="SimplePolygon.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="PolygonalDomain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
