--- a/dnn/NearestNeighbor/PDDNN/PDDNN.vcxproj
+++ b/dnn/NearestNeighbor/PDDNN/PDDNN.vcxproj
@@ -115,6 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="PDDNN.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PDDNN.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
