--- a/dnn/NearestNeighbor/PDDNN/PDDNN.vcxproj.filters
+++ b/dnn/NearestNeighbor/PDDNN/PDDNN.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="PDDNN.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="PDGraph.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PDDNN.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="PDgraph.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
