--- a/dnn/DataStrcutures/DCEL/DCEL.vcxproj.filters
+++ b/dnn/DataStrcutures/DCEL/DCEL.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="SimplePolygon.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Dijkstra.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
