⬆️ Revised PDGraph and Add PDNode Class for Dijkstra (also add main.cpp to test the Dijkstra)
1. Revised PDGraph and Add PDNode class for Dijkstra (also add main.cpp to test Dijkstra)
2. Additionally, some methods are implemented to test Dijkstra

--- a/dnn/NearestNeighbor/PDDNN/PDDNN.vcxproj
+++ b/dnn/NearestNeighbor/PDDNN/PDDNN.vcxproj
@@ -28,7 +28,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -115,10 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="PDGraph.cpp" />
+    <ClCompile Include="PDNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PDGraph.h" />
+    <ClInclude Include="PDNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
