:art: code changed :bug: remove compilation error while changing. :rocket: reduce useless repetition

--- a/dnn/NearestNeighbor/L1NNS/L1NNS/L1NNS.vcxproj.filters
+++ b/dnn/NearestNeighbor/L1NNS/L1NNS/L1NNS.vcxproj.filters
@@ -15,23 +15,26 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="rectangle.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="wakes.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Edge.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Point.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="RectangularDomain.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Cgraph.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Rectangle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cgraph.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Rectangle.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -47,5 +50,13 @@
     <ClInclude Include="Point.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Cgraph.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="domain.in">
+      <Filter>리소스 파일</Filter>
+    </None>
   </ItemGroup>
 </Project>
