--- a/dnn/NearestNeighbor/L1NNS/L1NNS/L1NNS.vcxproj
+++ b/dnn/NearestNeighbor/L1NNS/L1NNS/L1NNS.vcxproj
@@ -115,10 +115,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cgraph.cpp" />
     <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Point.cpp" />
-    <ClCompile Include="rectangle.cpp" />
-    <ClCompile Include="wakes.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="RectangularDomain.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cgraph.h" />
@@ -127,6 +129,9 @@
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="RectangularDomain.h" />
     <ClInclude Include="Segment.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="domain.in" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
