--- a/dnn/DataStrcutures/Triangulation/Makefile
+++ b/dnn/DataStrcutures/Triangulation/Makefile
@@ -1,11 +1,19 @@
-All : DCELdeepcopy.o
+All : Triangulation.o
 
-Triangulation.o : Triangulation_tmp.o ../BBST/SimpleBBST.o
-	#(cd ../DCEL;make all)
+Triangulation.o : Triangulation_tmp.o ../BBST/SimpleBBST.o ../DCEL/DCEL.o
+	ld -r -o Triangulation.o Triangulation_tmp.o ../BBST/SimpleBBST.o ../DCEL/DCEL.o
+
+../DCEL/DCEL.o :
+	(cd ../DCEL;make all)
+	
+../BBST/SimpleBBST.o :
 	(cd ../BBST;make all)
-	ld -r -o Triangulation.o Triangulation_tmp.o ../BBST/SimpleBBST.o
+
+Triangulation_tmp.o : Triangulation.cpp Triangulation.h DCELdeepcopy.h
+	g++ -o Triangulation_tmp.o -c Triangulation.cpp -std=c++17
 
 DCELdeepcopy.o : DCELdeepcopy.cpp DCELdeepcopy.h
-	g++ -o DCELdeepcopy.o -c DCELdeepcopy.cpp
+	g++ -o DCELdeepcopy.o -c DCELdeepcopy.cpp -std=c++17
+
 
 
