--- a/dnn/NearestNeighbor/L1NNS/L1NNS/L1NNS.vcxproj
+++ b/dnn/NearestNeighbor/L1NNS/L1NNS/L1NNS.vcxproj
@@ -77,6 +77,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <Link />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
