--- a/dnn/DataStrcutures/DCEL/DCEL.vcxproj.filters
+++ b/dnn/DataStrcutures/DCEL/DCEL.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="Vector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
