--- a/dnn/NearestNeighbor/L1NNS/L1NNS.vcxproj
+++ b/dnn/NearestNeighbor/L1NNS/L1NNS.vcxproj
@@ -78,6 +78,9 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link />
+    <Link>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -99,6 +102,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -116,16 +120,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cgraph.cpp" />
+    <ClCompile Include="CarrierGraph.cpp" />
     <ClCompile Include="Edge.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="opengl_gui.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="RectangularDomain.cpp" />
-    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cgraph.h" />
+    <ClInclude Include="CarrierGraph.h" />
     <ClInclude Include="Edge.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Rect.h" />
