update compile environment

--- a/dnn/Examples/Generate_DNN_input/Generate_Input/Generate_Input/Generate_Input.vcxproj
+++ b/dnn/Examples/Generate_DNN_input/Generate_Input/Generate_Input/Generate_Input.vcxproj
@@ -139,7 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Edge.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="generate_input.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Polygon.cpp" />
   </ItemGroup>
