:art: update makefile for generality

--- a/dnn/IPELET/L1_voronoi/Makefile
+++ b/dnn/IPELET/L1_voronoi/Makefile
@@ -2,15 +2,15 @@ CC = g++
 
 TARGET = L1_voronoi.dll
 OBJECTS = Edge.o L1voronoi.o Point.o Polygon.o PolygonClipping.o ..\IpeIO\ipeIO.o ipe_L1_voronoi.o
-
+IPE=C:/ipe-7.2.17
 
 all : $(TARGET)
 
 %.o : %.cpp
-	$(CC) -c -O2 -DWIN32 -fno-exceptions -fno-rtti -Iinclude $< -o $@
+	$(CC) -std=c++11 -c -O2 -DWIN32 -fno-exceptions -fno-rtti -I$(IPE)/include $< -o $@
 
 $(TARGET) : $(OBJECTS)
-	$(CC) -shared -o $(TARGET) $(OBJECTS) -LC:/ipe-7.2.17/bin -lipe -lipe
+	$(CC) -std=c++11 -shared -o $(TARGET) $(OBJECTS) -L$(IPE)/bin -lipe
 
 clean :
 	del $(OBJECTS) $(TARGET)
