--- a/dnn/IPELET/L1_voronoi/Window/Makefile
+++ b/dnn/IPELET/L1_voronoi/Window/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 
-TARGET = ..\L1_voronoi.dll
-OBJECTS = ..\Edge.o ..\L1voronoi.o ..\Point.o ..\Polygon.o ..\PolygonClipping.o ..\..\IpeIO\ipeIO.o ..\ipe_L1_voronoi.o
+TARGET = ..\L1_Voronoi.dll
+OBJECTS = ..\Edge.o ..\L1_Voronoi.o ..\Point.o ..\Polygon.o ..\PolygonClipping.o ..\..\IpeIO\ipeIO.o ..\ipe_L1_Voronoi.o
 IPE=C:\ipe-7.2.20
 
 all : $(TARGET)
