--- a/dnn/Algorithms/apx_3DSP/3DSP/3DSP/3DSP.vcxproj
+++ b/dnn/Algorithms/apx_3DSP/3DSP/3DSP/3DSP.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dots.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
