--- a/dnn/Algorithms/apx_3DSP/3DSP/3DSP/3DSP.vcxproj.filters
+++ b/dnn/Algorithms/apx_3DSP/3DSP/3DSP/3DSP.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="dots.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="propagation.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="propagation.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="dots.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
