:bug:Fix bugs in operator overloadings

--- a/dnn/Algorithms/apx_3DSP/3DSP/3DSP/3DSP.vcxproj
+++ b/dnn/Algorithms/apx_3DSP/3DSP/3DSP/3DSP.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="3DSP.cpp" />
     <ClCompile Include="dots.cpp" />
     <ClCompile Include="propagation.cpp" />
   </ItemGroup>
