--- a/dnn/DataStructures/DCEL/DCEL.vcxproj.filters
+++ b/dnn/DataStructures/DCEL/DCEL.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="RectangularDomain.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="DCEL.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
