--- a/dnn/NearestNeighbor/EpsGraph3D/EpsGraph3D.vcxproj.filters
+++ b/dnn/NearestNeighbor/EpsGraph3D/EpsGraph3D.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="Polytope.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Point.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="EpsGraph3D.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
