--- a/dnn/NearestNeighbor/ENN/DCEL/Makefile
+++ b/dnn/NearestNeighbor/ENN/DCEL/Makefile
@@ -1,19 +1,18 @@
-all: DCEL.o
+all: test.exe
 
-DCEL.o : DCELtmp.o Edge.o Point.o SimplePolygon.o Vector.o ../AVLTree/AVLTree.o
-	ld -o DCEL.o -r DCELtmp.o Edge.o Point.o SimplePolygon.o Vector.o ../AVLTree/AVLTree.o
 
-../AVLTree/AVLTree.o : 
-	(cd ../AVLTree;make all)
 
-DCELtmp.o : DCEL.cpp DCEL.h Edge.h Point.h SimplePolygon.h Vector.h ../AVLTree/AVLTree.h
-	g++ -o DCELtmp.o -c DCEL.cpp -std=c++17
+test.exe : main.o DCEL.o Edge.o Point.o Vector.o
+	g++ -o main.exe main.o DCEL.o Edge.o Point.o Vector.o
 
-SimplePolygon.o : SimplePolygon.h Edge.h SimplePolygon.cpp
-	g++ -o SimplePolygon.o -c SimplePolygon.cpp
+main.o : main.cpp AVLTree.h
+	g++ -o main.o -c main.cpp -std=c++17
+
+DCEL.o : DCEL.cpp DCEL.h Edge.h Point.h Vector.h AVLTree.h
+	g++ -o DCEL.o -c DCEL.cpp -std=c++17
 
 Vector.o : Vector.cpp Vector.h Point.h Edge.h
-	g++ -o Vector.o -c Vector.cpp
+	g++ -o Vector.o -c Vector.cpp -std=c++17
 
 Edge.o : Edge.cpp Edge.h Point.h
 	g++ -o Edge.o -c Edge.cpp -std=c++17
@@ -22,4 +21,4 @@ Point.o : Point.cpp Point.h
 	g++ -o Point.o -c Point.cpp
 
 clean :
-	rm -r ./*.o
+	del *.o main.exe
