:arrow_up: update json file

--- a/dnn/NearestNeighbor/ENN/DCEL/.vscode/settings.json
+++ b/dnn/NearestNeighbor/ENN/DCEL/.vscode/settings.json
@@ -44,6 +44,10 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "deque": "cpp",
+        "fstream": "cpp",
+        "queue": "cpp",
+        "sstream": "cpp"
     }
 }
