:memo: update gitignore setting.json

--- a/dnn/NearestNeighbor/ENN/DCEL/.vscode/settings.json
+++ b/dnn/NearestNeighbor/ENN/DCEL/.vscode/settings.json
@@ -48,6 +48,9 @@
         "deque": "cpp",
         "fstream": "cpp",
         "queue": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "set": "cpp",
+        "xtree": "cpp",
+        "map": "cpp"
     }
 }
