:arrow_up: modify json file

--- a/dnn/NearestNeighbor/ENN/DCEL/.vscode/settings.json
+++ b/dnn/NearestNeighbor/ENN/DCEL/.vscode/settings.json
@@ -51,6 +51,10 @@
         "sstream": "cpp",
         "set": "cpp",
         "xtree": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "cassert": "cpp",
+        "iomanip": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp"
     }
 }
