:arrow_up:Able to query a value of the given version in persistent tree

--- a/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj
+++ b/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="persistent.h" />
+    <ClInclude Include="Red Black Tree.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="persistent.cpp" />
