--- a/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj.filters
+++ b/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="persistent.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Red Black Tree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="persistent.cpp">
