Compute base and lcand

--- a/dnn/DataStructures/Delaunay_Linf/Makefile
+++ b/dnn/DataStructures/Delaunay_Linf/Makefile
@@ -57,10 +57,10 @@ RM = /opt/homebrew/Cellar/cmake/3.21.3_1/bin/cmake -E rm -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/Projects/Linf_Delaunay"
+CMAKE_SOURCE_DIR = "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/postechDNN/dnn/DataStructures/Delaunay_Linf"
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/Projects/Linf_Delaunay"
+CMAKE_BINARY_DIR = "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/postechDNN/dnn/DataStructures/Delaunay_Linf"
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -87,9 +87,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/Projects/Linf_Delaunay/CMakeFiles" "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/Projects/Linf_Delaunay//CMakeFiles/progress.marks"
+	$(CMAKE_COMMAND) -E cmake_progress_start "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/postechDNN/dnn/DataStructures/Delaunay_Linf/CMakeFiles" "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/postechDNN/dnn/DataStructures/Delaunay_Linf//CMakeFiles/progress.marks"
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/Projects/Linf_Delaunay/CMakeFiles" 0
+	$(CMAKE_COMMAND) -E cmake_progress_start "/Users/chaeyoon/AlgorithmsLab Dropbox/정채윤/postechDNN/dnn/DataStructures/Delaunay_Linf/CMakeFiles" 0
 .PHONY : all
 
 # The main clean target
