--- a/dnn/NearestNeighbor/EpsGraph3D/EpsGraph3D.vcxproj
+++ b/dnn/NearestNeighbor/EpsGraph3D/EpsGraph3D.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EpsGraph3D.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Polytope.cpp" />
   </ItemGroup>
