--- a/dnn/NearestNeighbor/EpsGraph3D/EpsGraph3D.vcxproj.filters
+++ b/dnn/NearestNeighbor/EpsGraph3D/EpsGraph3D.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Polytope.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
