--- a/dnn/DataStructures/DCEL/DCEL.vcxproj.filters
+++ b/dnn/DataStructures/DCEL/DCEL.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="RectangularDomain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DCEL.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CarrierGraph.h">
@@ -51,7 +54,7 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="DCEL.h">
-      <Filter>소스 파일</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
