--- a/dnn/DataStructures/Delaunay_Linf/CMakeLists.txt
+++ b/dnn/DataStructures/Delaunay_Linf/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.2)
 
+set(CMAKE_CXX_STANDARD 17)
 
 add_executable(delaunay geom2d.h quadedge.cpp quadedge.h main.cpp)
 
@@ -7,7 +8,11 @@ find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 
 
-include_directories(${OPENGL_INCLUDE_DIRS}  ${GL_INCLUDE_DIRS})
+find_package(Boost COMPONENTS filesystem system iostreams REQUIRED)
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/externals/gnuplot-iostream")
 
-target_link_libraries(delaunay ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
+
+include_directories(${OPENGL_INCLUDE_DIRS}  ${GL_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+
+target_link_libraries(delaunay ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${Boost_LIBRARIES})
 
