:art: modifying to read 3Deps

--- a/dnn/Examples/DNNDemo/DNNDemo/DNNDemo.vcxproj.filters
+++ b/dnn/Examples/DNNDemo/DNNDemo/DNNDemo.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="3Deps">
+      <UniqueIdentifier>{6949c4d9-bbd6-4a0e-ae44-1f9afa9e5dd9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DNNDemo.h">
